maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: Unit does not take parameters
      goNord()
            ^